# vecpar

./: .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/all/: CMakeLists.txt
backend/all/include/vecpar/all/: chain.hpp  chain_orchestrator.hpp  internal.hpp  main.hpp  ompt.hpp
backend/all/include/vecpar/all/orchestrator/: common.hpp  default_chain.hpp  gpu_chain.hpp  tmp.hpp
backend/cuda/: CMakeLists.txt
backend/cuda/include/vecpar/cuda/: cuda_parallelization.hpp
backend/cuda/include/vecpar/cuda/detail/: config.hpp  device_memory.hpp  host_memory.hpp  internal.hpp  kernels.hpp  managed_memory.hpp
backend/cuda/include/vecpar/cuda/detail/common/: config.hpp  cuda_utils.hpp  kernels.hpp
backend/cuda/include/vecpar/cuda/detail/generic/: internal.hpp  raw_data.hpp
backend/cuda/include/vecpar/cuda/detail/vecmem/: host_memory.hpp  internal.hpp  managed_memory.hpp
backend/omp/: CMakeLists.txt
backend/omp/include/vecpar/omp/: omp_parallelization.hpp
backend/omp/include/vecpar/omp/detail/: config.hpp  internal.hpp
backend/omp/include/vecpar/omp/detail/composed/: p_map_filter.hpp  p_map_reduce.hpp
backend/omp/include/vecpar/omp/detail/simple/: p_filter.hpp  p_map.hpp  p_reduce.hpp
backend/ompt/: CMakeLists.txt
backend/ompt/include/vecpar/ompt/: ompt_parallelization.hpp
backend/ompt/include/vecpar/ompt/detail/: config.hpp
cmake/: utils.cmake  vecpar-aarch64.cmake  vecpar-config.cmake.in  vecpar-pack.cmake
core/: CMakeLists.txt
core/include/vecpar/core/algorithms/: parallelizable_filter.hpp  parallelizable_map.hpp  parallelizable_map_filter.hpp  parallelizable_map_reduce.hpp  parallelizable_reduce.hpp
core/include/vecpar/core/algorithms/detail/: filter.hpp  map.hpp  reduce.hpp
core/include/vecpar/core/definitions/: common.hpp  config.hpp  helper.hpp  types.hpp
test/: CMakeLists.txt
test/common/: data_types.hpp
test/common/algorithm/: algorithm.hpp  test_algorithm_1.hpp  test_algorithm_10.hpp  test_algorithm_11.hpp  test_algorithm_2.hpp  test_algorithm_3.hpp  test_algorithm_4.hpp  test_algorithm_5.hpp  test_algorithm_6.hpp  test_algorithm_7.hpp  test_algorithm_8.hpp  test_algorithm_9.hpp
test/common/algorithm/benchmark/: axpy.hpp  daxpy.hpp  saxpy.hpp
test/common/infrastructure/: TimeLogger.hpp  TimeTest.hpp  cleanup.hpp  randoms.hpp  sizes.hpp
test/cuda/: CMakeLists.txt  CMakeLists_nvcc.txt  CudaTests.cpp
test/cuda/benchmark/: overhead_cuda.cpp  performance.cpp
test/cuda/benchmark/native_algorithms/: common.hpp  test_algorithm_2_cuda_hm.hpp  test_algorithm_2_cuda_mm.hpp
test/cuda/native_algorithms/: test_algorithm_2_cuda.hpp
test/cuda/scenarios/: device_memory_chain.cpp  host_device_memory.cpp  managed_memory.cpp
test/hybrid/: CMakeLists.txt  HybridTests.cpp  omp_managed_memory.cpp
test/omp/: CMakeLists.txt  OmpTests.cpp
test/omp/benchmark/: overhead_omp.cpp  performance.cpp
test/omp/benchmark/native_algorithms/: test_algorithm_2_omp.hpp  test_algorithm_2_omp_optimized.hpp  test_algorithm_2_seq.hpp
test/omp/native_algorithms/: test_algorithm_2_omp.hpp  test_algorithm_2_omp_optimized.hpp  test_algorithm_2_seq.hpp
test/omp/scenarios/: host_memory.cpp
test/ompt/: CMakeLists.txt  OmptTests.cpp
test/ompt/benchmark/: ompt.cpp  performance.cpp
test/ompt/scenarios/: host_memory.cpp
test/scripts/: saxpy_and_chain.sh
test/single_source/: CMakeLists.txt  SingleSourceTests.cpp  SingleSource_HM_Tests.cpp  SingleSource_MM_Tests.cpp
test/single_source/benchmark/: common.hpp  performance_host_device_memory.cpp  performance_managed_memory.cpp
test/single_source/scenarios/: Test.cpp  host_device_memory.cpp  managed_memory.cpp
